objects/Opportunity_Reservable__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When we get building uuid insted of reservable uuid in Contract event payload map here.</description>
        <inlineHelpText>When we get building uuid insted of reservable uuid in Contract event payload map here.</inlineHelpText>
        <label>Sellable Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Opportunity Reservables</relationshipLabel>
        <relationshipName>Opportunity_Reservables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commitment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commitment Term</label>
        <referenceTo>Commitment_Term__c</referenceTo>
        <relationshipLabel>Opportunity Reservables</relationshipLabel>
        <relationshipName>Opportunity_Reservables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commitment_Terms_End_Date__c</fullName>
        <description>This field will be passed in move-ins array of contract event. Captures the date of end date of commitment for opportunity reservable.</description>
        <label>Commitment Terms End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conference_Room_Credits__c</fullName>
        <label>Conference Room Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_by_WeWork__c</fullName>
        <description>Shows if related Building is HQ by WeWork</description>
        <formula>Opportunity__r.Building__r.HQ_by_WeWork__c</formula>
        <label>HQ by WeWork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Won__c</fullName>
        <formula>IF(Opportunity__r.IsWon =True, "Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Won</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Method__c</fullName>
        <label>Monthly Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Price__c</fullName>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies_B_W__c</fullName>
        <label>Monthly Prints/Copies B&amp;W</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies_Color__c</fullName>
        <label>Monthly Prints/Copies Color</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Building__c</fullName>
        <formula>Opportunity__r.Building__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Reservables</relationshipLabel>
        <relationshipName>Opportunity_Offices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paperwork_Signed__c</fullName>
        <formula>IF(ISPICKVAL(Opportunity__r.StageName, "Closing"), "Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paperwork Signed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Desks__c</fullName>
        <label>Pending Desks</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prints_B_W_and_Color__c</fullName>
        <formula>"B&amp;W: "&amp; TEXT(Monthly_Prints_Copies_B_W__c) &amp;" Color: "&amp; TEXT(Monthly_Prints_Copies_Color__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prints B&amp;W and Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable__c</fullName>
        <label>Reservable</label>
        <referenceTo>Reservable__c</referenceTo>
        <relationshipLabel>Opportunity Reservables</relationshipLabel>
        <relationshipName>Opportunity_Offices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>Reservation__c</referenceTo>
        <relationshipLabel>Opportunity Reservables</relationshipLabel>
        <relationshipName>Opportunity_Reservables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sellable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If in contract event payload we get deal:true then this field will be true then this value becomes true</description>
        <inlineHelpText>To identify that this record was created for Sellable or for Normal move_ins</inlineHelpText>
        <label>Sellable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Value of start date from Contract Event endpoint</description>
        <inlineHelpText>Value of start date from Contract Event endpoint</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>reservation_uuid__c</fullName>
        <externalId>true</externalId>
        <label>reservation_uuid</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Opportunity Reservable</label>
    <nameField>
        <displayFormat>OO-{0000}</displayFormat>
        <label>Office ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Reservables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Bed_Residential_Units_Reservation</fullName>
        <active>true</active>
        <description>Can not reserve bed can not be reserved until further notice.</description>
        <errorConditionFormula>OR(ISPICKVAL(Reservable__r.Office_Work_Station_Type__c, "Bed"),ISPICKVAL(Reservable__r.Office_Work_Station_Type__c, "ResidentialUnit"))</errorConditionFormula>
        <errorDisplayField>Reservable__c</errorDisplayField>
        <errorMessage>Bed and Residential Units are currently not available for reservation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_select_HotDesk_Reservables</fullName>
        <active>false</active>
        <errorConditionFormula>and(Not(isnull( CreatedDate )),  ISPICKVAL(Reservable__r.Office_Work_Station_Type__c, "HotDeskArea"))</errorConditionFormula>
        <errorDisplayField>Reservable__c</errorDisplayField>
        <errorMessage>You can't select reservable with Office Type "HotDeskArea"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reservable_buildings_same_as_Opportunity</fullName>
        <active>false</active>
        <description>Opportunity Reservable has to be from the same Building as Opportunity</description>
        <errorConditionFormula>Opportunity__r.Building__c  &lt;&gt;  Reservable__r.Building__c</errorConditionFormula>
        <errorDisplayField>Reservable__c</errorDisplayField>
        <errorMessage>You have to select the Reservable from the same Building as indicated on Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reservable_should_not_be_archived</fullName>
        <active>false</active>
        <description>If Reservable Archived or not available you can't add Opportunity Reservable</description>
        <errorConditionFormula>AND( NOT(ISNULL(CreatedDate)), NOT(ISNULL( Reservable__r.Archived_On__c ) ))</errorConditionFormula>
        <errorDisplayField>Reservable__c</errorDisplayField>
        <errorMessage>The Reservable you're selecting is archived. Please select another Reservable.</errorMessage>
    </validationRules>
</CustomObject>